@@ -3,6 +3,7 @@ Edited help dialog text
 Fixed: "Reset All" needs to reset the activity level selector
 Balanced diet dialogs are disposed during reset all
 Items disappear if you drop them in the play area, but not on the plate/exercise log
+Added year month format to control panel
 
 New in 0.00.71
 Changed the layout to have the green control panel background extend to the top. This required moving some of the play area objects to the right. This was based on the "eating and exercise layout.pdf" in the doc directory as a guide - we used the "Modified 1" layout.
